# chess-engine

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  meson.build  meson_options.txt  testepd.py
data/: bratko-kopec.epd  famous.epd  zugzwang.epd
epd/: win-at-chess.epd
src/: CMakeLists.txt  bitboard.cc  bitboard.hh  evaluation.cc  evaluation.hh  heuristics.hh  kogge-impl.hh  magic.cc  magic.hh  main.cc  movegen.cc  movegen.hh  moveorder.cc  moveorder.hh  pawns.cc  pawns.hh  perft.cc  perft.hh  perft.test.cc  position.cc  position.hh  search.cc  search.hh  tt.cc  tt.hh  types.hh  uci.cc  uci.hh  ucioption.cc  ucioption.hh
src/threading/: thread.cc  thread.hh
src/util/: array.hh  assert.hh  bits.hh  cmdline.hh  compiler.hh  enum.hh  hashtable.hh  maths.hh  random.hh  tree.hh  tuple.hh
subprojects/: Catch2.wrap  fmt.wrap
tests/: CMakeLists.txt  main.cc  perft.cc
